<resources>
    <string name="app_name">Main_page_of_application</string>
    <string name="ForButtonCatalog">"Каталог"</string>
    <string name="ForButtonShops">"Магазины"</string>
    <string name="ForButtonPersonalArea">"Личный кабинет"</string>

    <string name="UpperBar_catalogName_1">"КАТАЛОГ"</string>
    <string name="UpperBar_button_allGoods">"ВСЕ ТОВАРЫ"</string>
    <string name="BasketTitle">"КОРЗИНА"</string>
    <string name="Button_in_basket_remove">"Удалить"</string>
    <string name="Button_in_basket_pay">Оформить \n заказ</string>

    <string name="ElementOfListGoods_TextView_price">"Цена:"</string>



    

    <string name="TV_about_company_1">
        ТД КАРС – крупнейший поставщик посуды,\n
        сувенирной продукции  предметов интерьера \n
        на территории от Урала до Дальнего Востока и \n
        незаменимый помощник в выборе подарков. \n
        У нас каждый сможет совершить покупку на \n
        свой вкус и по приемлемой цене.
    </string>
    <string name="TV_about_company_2">
        Наши клиенты всегда имеют возможность \n
        приобрести как модные новинки, так и \n
        классические, традиционные посуду и \n
        сувениры, и оптом и в розницу.
    </string>
    <string name="TV_about_company_3">
        В каталоге вы ознакомитесь с самым большим \n
        ассортиментом посуды, сувениров и предметов \n
        интерьера. На его страницах вы найдете \n
        продукцию со всего мира, из Чехии, Германии, \n
        Италии, Франции, Японии и др.
    </string>
    <string name="TV_about_company_4">
        Столовая посуда и приборы настолько \n
        разнообразны и отличаются дизайном, \n
        материалом изготовления, качеством, \n
        функциональным предназначением, что \n
        каждый может себе найти посуду по душе.
    </string>
</resources>