<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/MainAppColor"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/LogoCompanyID"
        android:layout_marginTop="20dp"
        android:layout_marginStart="124dp"
        android:layout_width="164dp"
        android:layout_height="106dp">
    </ImageView>



    <LinearLayout
        android:background="@drawable/main_page_about_company"
        android:layout_marginStart="33.5dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        android:layout_width="345dp"
        android:layout_height="452dp">

        <TextView
            android:text="@string/TV_about_company_1"
            android:textSize="13.3sp"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:layout_marginTop="16dp"
            android:layout_marginStart="9dp"
            android:layout_width="327dp"
            android:layout_height="114dp">
        </TextView>
        <TextView
            android:layout_marginTop="14dp"
            android:layout_marginStart="22.5dp"
            android:text="@string/TV_about_company_2"
            android:textSize="13.3sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_width="300dp"
            android:layout_height="76dp">
        </TextView>
        <TextView
            android:layout_marginTop="14dp"
            android:layout_marginStart="6.5dp"
            android:text="@string/TV_about_company_3"
            android:textSize="13.3sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_width="332dp"
            android:layout_height="95dp">
        </TextView>
        <TextView
            android:layout_marginTop="14dp"
            android:layout_marginStart="23.5dp"
            android:text="@string/TV_about_company_4"
            android:textSize="13.3sp"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:layout_width="298dp"
            android:layout_height="95dp">
        </TextView>
    </LinearLayout>

    <LinearLayout
        android:background="@drawable/app_navigation_bar"
        android:orientation="horizontal"
        android:layout_marginTop="125dp"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginStart="50.5dp"
            android:layout_marginTop="10dp"
            android:layout_width="70dp"
            android:layout_height="80dp">
            <ImageButton
                android:id="@+id/btnCatalog"
                android:layout_gravity="center"
                android:layout_width="50dp"
                android:layout_height="50dp">
            </ImageButton>
            <TextView
                android:text="@string/ForButtonCatalog"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_width="70dp"
                android:layout_height="30dp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginStart="50.5dp"
            android:layout_marginTop="10dp"
            android:layout_width="70dp"
            android:layout_height="80dp">
            <ImageButton
                android:id="@+id/btnShops"
                android:layout_gravity="center"
                android:layout_width="50dp"
                android:layout_height="50dp">
            </ImageButton>
            <TextView
                android:text="@string/ForButtonShops"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_width="70dp"
                android:layout_height="30dp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginStart="50.5dp"
            android:layout_marginTop="10dp"
            android:layout_width="70dp"
            android:layout_height="80dp">
            <ImageButton
                android:id="@+id/btnMyProfil"
                android:layout_gravity="center"
                android:layout_width="50dp"
                android:layout_height="50dp">
            </ImageButton>
            <TextView
                android:text="@string/ForButtonPersonalArea"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_width="70dp"
                android:layout_height="30dp">
            </TextView>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>