<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@color/MainAppColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/BasketLogo"
        android:onClick="ONclick_button_BasketLOGO"
        android:background="@null"
        android:layout_marginStart="161dp"
        android:layout_marginTop="5dp"
        android:layout_width="90dp"
        android:layout_height="58dp">
    </ImageButton>

    <TextView
        android:id="@+id/BasketTitleId"
        android:layout_below="@+id/BasketLogo"
        android:background="@drawable/for_basket_activity"
        android:layout_marginTop="5dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/BasketTitle"
        android:textSize="27sp"
        android:textColor="@color/black"
        android:layout_width="380dp"
        android:layout_height="45dp">
    </TextView>

    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/BodyOfBasketId"
        android:layout_below="@+id/BasketTitleId"
        android:background="@drawable/body_basket_activity_style"
        android:layout_marginTop="20dp"
        android:layout_marginStart="16dp"
        android:layout_width="380dp"
        android:layout_height="450dp">
    </LinearLayout>

    <LinearLayout
        android:gravity="center"
        android:orientation="horizontal"
        android:layout_below="@+id/BodyOfBasketId"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:layout_width="380dp"
        android:layout_height="70dp">

        <Button
            android:textSize="12sp"
            android:textAlignment="center"
            android:text="@string/Button_in_basket_remove"
            android:textColor="@color/white"
            android:background="@drawable/buttons_in_basket"
            android:layout_width="150dp"
            android:layout_height="70dp">
        </Button>

        <Button
            android:textSize="12sp"
            android:text="@string/Button_in_basket_pay"
            android:textColor="@color/white"
            android:background="@drawable/buttons_in_basket"
            android:layout_marginStart="30dp"
            android:layout_width="150dp"
            android:layout_height="70dp">
        </Button>

    </LinearLayout>





    <LinearLayout
        android:layout_alignParentBottom="true"
        android:background="@drawable/app_navigation_bar"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginStart="50.5dp"
            android:layout_marginTop="10dp"
            android:layout_width="70dp"
            android:layout_height="80dp">
            <ImageButton
                android:id="@+id/btnCatalog"
                android:onClick="ONclick_buttonBasket_catalog"
                android:background="@null"
                android:layout_gravity="center"
                android:layout_width="50dp"
                android:layout_height="50dp">
            </ImageButton>
            <TextView
                android:text="@string/ForButtonCatalog"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_width="70dp"
                android:layout_height="30dp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginStart="50.5dp"
            android:layout_marginTop="10dp"
            android:layout_width="70dp"
            android:layout_height="80dp">
            <ImageButton
                android:id="@+id/btnShops"
                android:background="@null"
                android:layout_gravity="center"
                android:layout_width="50dp"
                android:layout_height="50dp">
            </ImageButton>
            <TextView
                android:text="@string/ForButtonShops"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_width="70dp"
                android:layout_height="30dp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginStart="50.5dp"
            android:layout_marginTop="10dp"
            android:layout_width="70dp"
            android:layout_height="80dp">
            <ImageButton
                android:id="@+id/btnMyProfil"
                android:background="@null"
                android:layout_gravity="center"
                android:layout_width="50dp"
                android:layout_height="50dp">
            </ImageButton>
            <TextView
                android:text="@string/ForButtonPersonalArea"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_width="70dp"
                android:layout_height="30dp">
            </TextView>
        </LinearLayout>

    </LinearLayout>
</RelativeLayout>