<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/MainAppColor"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/CatalogLogo"
        android:onClick="ONclick_button_LOGO"
        android:background="@null"
        android:layout_marginStart="150.5dp"
        android:layout_marginTop="20dp"
        android:layout_width="111dp"
        android:layout_height="72dp">
    </ImageButton>


    <LinearLayout
        android:layout_marginTop="10dp"
        android:background="@color/UpperNavigationBarColor"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="70dp">

    </LinearLayout>

    <LinearLayout
        android:background="@drawable/app_navigation_bar"
        android:orientation="horizontal"
        android:layout_marginTop="560dp"
        android:layout_width="match_parent"
        android:layout_height="100dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginStart="50.5dp"
            android:layout_marginTop="10dp"
            android:layout_width="70dp"
            android:layout_height="80dp">
            <ImageButton
                android:id="@+id/btnCatalog"
                android:background="@null"
                android:layout_gravity="center"
                android:layout_width="50dp"
                android:layout_height="50dp">
            </ImageButton>
            <TextView
                android:text="@string/ForButtonCatalog"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_width="70dp"
                android:layout_height="30dp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginStart="50.5dp"
            android:layout_marginTop="10dp"
            android:layout_width="70dp"
            android:layout_height="80dp">
            <ImageButton
                android:id="@+id/btnShops"
                android:background="@null"
                android:layout_gravity="center"
                android:layout_width="50dp"
                android:layout_height="50dp">
            </ImageButton>
            <TextView
                android:text="@string/ForButtonShops"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_width="70dp"
                android:layout_height="30dp">
            </TextView>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginStart="50.5dp"
            android:layout_marginTop="10dp"
            android:layout_width="70dp"
            android:layout_height="80dp">
            <ImageButton
                android:id="@+id/btnMyProfil"
                android:background="@null"
                android:layout_gravity="center"
                android:layout_width="50dp"
                android:layout_height="50dp">
            </ImageButton>
            <TextView
                android:text="@string/ForButtonPersonalArea"
                android:textSize="12sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:layout_width="70dp"
                android:layout_height="30dp">
            </TextView>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>